Activity feed spacing fix

--- a/sites/all/themes/atwork_zen/sass/layouts/_atworklayout.scss
+++ b/sites/all/themes/atwork_zen/sass/layouts/_atworklayout.scss
@@ -354,7 +354,7 @@ table#sn-newsletter-layout {
   transform-origin: left top;
 }
 .page-user .block-atwork-activity .entity-message p:first-of-type {
-  max-width:85%!important;
+  padding-top: 20px;
 }
 }
 
